Update: Complete website redesign with professional portfolio
- Fixed all build errors and dependencies
- Created new Hero section with professional introduction
- Added About section with experience timeline
- Implemented Services section with 6 core offerings
- Built Portfolio section showcasing key projects
- Created Contact section with form and info
- Added responsive navigation with mobile menu
- Implemented dark theme with modern design
- Fixed Tailwind CSS configuration
- Resolved missing dependencies (critters)
- Optimized for performance and SEO

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
+  "extends": "./tsconfig.node.json",
   "compilerOptions": {
     "target": "ES2022",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
-    "skipLibCheck": true,
+    "skipLibCheck": false,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
@@ -23,6 +24,7 @@
     "allowUnusedLabels": false,
     "exactOptionalPropertyTypes": true,
     "noImplicitOverride": true,
+    "types": ["node"],
     "plugins": [
       {
         "name": "next"
