--- a/package.json
+++ b/package.json
@@ -8,53 +8,69 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "type-check": "tsc --noEmit",
-    "clean": "rm -rf .next node_modules/.cache",
-    "full-clean": "rm -rf .next node_modules package-lock.json && npm install",
-    "check-deps": "npm ls",
-    "audit-fix": "npm audit fix",
-    "build-check": "npm run type-check && npm run lint && npm run build",
-    "pre-deploy": "npm run clean && npm run build-check"
+    "clean-install": "powershell -ExecutionPolicy Bypass -File clean-install.ps1",
+    "deps:check": "npm outdated",
+    "deps:update": "npm update --save",
+    "deps:audit": "npm audit"
   },
   "dependencies": {
-    "@heroicons/react": "^2.2.0",
-    "@hookform/resolvers": "^3.3.4",
-    "@react-three/drei": "^9.96.0",
-    "@react-three/fiber": "^8.15.0",
-    "@tailwindcss/container-queries": "^0.1.1",
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.10",
-    "@vercel/analytics": "^1.1.2",
-    "@vercel/speed-insights": "^1.0.2",
-    "clsx": "^2.1.0",
-    "framer-motion": "^11.0.3",
-    "next": "^15.3.2",
-    "next-themes": "^0.2.1",
-    "react": "^18.2.0",
-    "react-countup": "^6.5.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.49.3",
-    "react-icons": "^5.0.1",
-    "react-intersection-observer": "^9.5.3",
-    "react-type-animation": "^3.2.0",
-    "tailwind-merge": "^2.2.0",
-    "three": "^0.160.0",
-    "zod": "^3.22.4"
+    "@heroicons/react": "2.1.5",
+    "@hookform/resolvers": "3.9.1",
+    "@radix-ui/react-dialog": "1.1.2",
+    "@radix-ui/react-dropdown-menu": "2.1.2",
+    "@radix-ui/react-slot": "1.1.0",
+    "@radix-ui/react-tooltip": "1.1.4",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "8.17.10",
+    "@vercel/analytics": "1.5.0",
+    "@vercel/speed-insights": "1.2.0",
+    "class-variance-authority": "0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "11.0.0",
+    "lucide-react": "0.511.0",
+    "next": "^14.2.29",
+    "next-themes": "0.4.3",
+    "nextjs-toploader": "3.8.16",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "7.56.4",
+    "react-icons": "5.4.0",
+    "react-intersection-observer": "9.14.0",
+    "react-type-animation": "3.2.0",
+    "sonner": "1.7.1",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "1.0.7",
+    "three": "0.160.1",
+    "zod": "3.25.29"
   },
   "devDependencies": {
-    "@types/node": "^20.11.0",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
-    "@types/three": "^0.160.0",
-    "autoprefixer": "^10.4.17",
-    "cross-env": "^7.0.3",
-    "depcheck": "^1.4.7",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.1.0",
-    "husky": "^9.1.7",
-    "lint-staged": "^15.5.2",
-    "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "@next/bundle-analyzer": "14.2.18",
+    "@tailwindcss/forms": "0.5.9",
+    "@tailwindcss/typography": "0.5.15",
+    "@types/node": "22.10.0",
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.0",
+    "@types/three": "0.160.0",
+    "autoprefixer": "10.4.21",
+    "critters": "^0.0.23",
+    "eslint": "8.57.1",
+    "eslint-config-next": "14.2.18",
+    "eslint-config-prettier": "9.1.0",
+    "postcss": "8.5.1",
+    "prettier": "3.4.2",
+    "prettier-plugin-tailwindcss": "0.6.9",
+    "tailwindcss": "3.4.15",
+    "typescript": "5.7.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "overrides": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
