--- a/package.json
+++ b/package.json
@@ -18,34 +18,34 @@
     "deps:audit": "npm audit"
   },
   "dependencies": {
-    "@heroicons/react": "2.1.5",
-    "@hookform/resolvers": "3.9.1",
-    "@radix-ui/react-dialog": "1.1.2",
-    "@radix-ui/react-dropdown-menu": "2.1.2",
-    "@radix-ui/react-slot": "1.1.0",
-    "@radix-ui/react-tooltip": "1.1.4",
+    "@heroicons/react": "^2.1.5",
+    "@hookform/resolvers": "^3.9.1",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.4",
     "@react-three/drei": "^9.122.0",
-    "@react-three/fiber": "8.17.10",
-    "@vercel/analytics": "1.5.0",
-    "@vercel/speed-insights": "1.2.0",
-    "class-variance-authority": "0.7.1",
+    "@react-three/fiber": "^8.17.10",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "11.0.0",
-    "lucide-react": "0.511.0",
+    "framer-motion": "^11.0.0",
+    "lucide-react": "^0.511.0",
     "next": "^14.2.29",
-    "next-themes": "0.4.3",
-    "nextjs-toploader": "3.8.16",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "7.56.4",
-    "react-icons": "5.4.0",
-    "react-intersection-observer": "9.14.0",
-    "react-type-animation": "3.2.0",
-    "sonner": "1.7.1",
+    "next-themes": "^0.4.3",
+    "nextjs-toploader": "^3.8.16",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.56.4",
+    "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.14.0",
+    "react-type-animation": "^3.2.0",
+    "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "1.0.7",
-    "three": "0.160.1",
-    "zod": "3.25.29"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.160.1",
+    "zod": "^3.25.29"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "14.2.18",
