--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "clsx": "2.1.1",
     "framer-motion": "11.0.0",
     "lucide-react": "0.511.0",
-    "next": "14.2.29",
+    "next": "^14.2.29",
     "next-themes": "0.4.3",
     "nextjs-toploader": "3.8.16",
     "react": "18.2.0",
