feat: improve contact form and cleanup

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "build": "next build --no-lint",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
+    "test": "node --test",
+    "test:watch": "node --test",
+    "test:coverage": "node --test",
     "type-check": "tsc --noEmit",
     "clean-install": "powershell -ExecutionPolicy Bypass -File clean-install.ps1",
     "deps:check": "npm outdated",
