--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -7,7 +7,7 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "strict": false,
-    "types": ["node"],
+      "types": ["node", "jest"],
     "target": "ES2020",
     "lib": ["ES2020"],
     "resolveJsonModule": true,
