--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "clean-install": "powershell -ExecutionPolicy Bypass -File clean-install.ps1",
     "deps:check": "npm outdated",
     "deps:update": "npm update --save",
-    "deps:audit": "npm audit"
+    "deps:audit": "npm audit",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@heroicons/react": "2.1.5",
@@ -32,7 +33,7 @@
     "clsx": "2.1.1",
     "framer-motion": "11.0.0",
     "lucide-react": "0.511.0",
-    "next": "^14.2.29",
+    "next": "^15.3.3",
     "next-themes": "0.4.3",
     "nextjs-toploader": "3.8.16",
     "react": "18.2.0",
@@ -48,26 +49,37 @@
     "zod": "3.25.29"
   },
   "devDependencies": {
+    "@axe-core/playwright": "^4.8.1",
     "@next/bundle-analyzer": "14.2.18",
     "@tailwindcss/forms": "0.5.9",
+    "@tailwindcss/postcss": "^4.1.8",
     "@tailwindcss/typography": "0.5.15",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "29.5.10",
     "@types/node": "22.10.0",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
     "@types/three": "0.160.0",
     "autoprefixer": "10.4.21",
+    "axe-core": "^4.8.3",
     "critters": "^0.0.23",
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.18",
     "eslint-config-prettier": "9.1.0",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "^30.0.0-beta.3",
+    "next-pwa": "^5.6.0",
+    "next-sitemap": "^4.2.3",
+    "playwright": "^1.42.1",
     "postcss": "8.5.1",
     "prettier": "3.4.2",
-    "prettier-plugin-tailwindcss": "0.6.9",
-    "tailwindcss": "3.4.15",
-    "typescript": "5.7.2",
-    "jest": "29.7.0",
+    "prettier-plugin-tailwindcss": "^0.6.12",
+    "tailwindcss": "^4.1.8",
     "ts-jest": "29.1.1",
-    "@types/jest": "29.5.10"
+    "typescript": "5.7.2"
   },
   "engines": {
     "node": ">=18.0.0"
