--- a/package.json
+++ b/package.json
@@ -1,83 +1,50 @@
 {
   "name": "az-digital-hub",
-  "version": "2.0.0",
-  "description": "Ahmed Ziwar's Digital Portfolio - IT Consultant & Digital Marketing Expert",
+  "version": "3.0.0",
+  "description": "Ahmed Ziwar - Strategic Digital Marketing Commander | ROI-Driven Solutions for Kuwait & GCC",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build --no-lint",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --passWithNoTests",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "type-check": "tsc --noEmit",
-    "clean-install": "powershell -ExecutionPolicy Bypass -File clean-install.ps1",
-    "deps:check": "npm outdated",
-    "deps:update": "npm update --save",
-    "deps:audit": "npm audit"
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@heroicons/react": "2.1.5",
-    "@hookform/resolvers": "3.9.1",
-    "@radix-ui/react-dialog": "1.1.2",
-    "@radix-ui/react-dropdown-menu": "2.1.2",
-    "@radix-ui/react-slot": "1.1.0",
-    "@radix-ui/react-tooltip": "1.1.4",
-    "@react-three/drei": "9.122.0",
-    "@react-three/fiber": "8.17.10",
-    "@vercel/analytics": "1.5.0",
-    "@vercel/speed-insights": "1.2.0",
-    "class-variance-authority": "0.7.1",
-    "clsx": "2.1.1",
-    "framer-motion": "11.0.0",
-    "lucide-react": "0.511.0",
-    "next": "^14.2.29",
-    "next-themes": "0.4.3",
-    "nextjs-toploader": "3.8.16",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "7.56.4",
-    "react-icons": "5.4.0",
-    "react-intersection-observer": "9.14.0",
-    "react-type-animation": "3.2.0",
-    "sonner": "1.7.1",
-    "tailwind-merge": "2.6.0",
-    "tailwindcss-animate": "1.0.7",
-    "three": "0.160.1",
-    "zod": "3.25.29"
+    "@heroicons/react": "^2.1.5",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.4",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.0.0",
+    "lucide-react": "^0.511.0",
+    "next": "15.1.3",
+    "next-themes": "^0.4.3",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.14.0",
+    "react-type-animation": "^3.2.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "14.2.18",
-    "@tailwindcss/forms": "0.5.9",
-    "@tailwindcss/typography": "0.5.15",
-    "@types/node": "22.10.0",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.0",
-    "@types/three": "0.160.0",
-    "autoprefixer": "10.4.21",
-    "critters": "^0.0.23",
-    "eslint": "8.57.1",
-    "eslint-config-next": "14.2.18",
-    "eslint-config-prettier": "9.1.0",
-    "postcss": "8.5.1",
-    "prettier": "3.4.2",
-    "prettier-plugin-tailwindcss": "0.6.9",
-    "tailwindcss": "3.4.15",
-    "typescript": "5.7.2",
-    "jest": "29.7.0",
-    "ts-jest": "29.1.1",
-    "@types/jest": "29.5.10"
+    "@types/node": "^22.10.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^15.1.3",
+    "postcss": "^8.5.1",
+    "prettier": "^3.4.2",
+    "tailwindcss": "^3.4.15",
+    "typescript": "^5.7.2"
   },
   "engines": {
     "node": ">=18.0.0"
-  },
-  "resolutions": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "overrides": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
   }
 }
