--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,9 @@
 {
-  "buildCommand": "npm run build",
-  "outputDirectory": ".next",
-  "framework": "nextjs",
-  "installCommand": "npm install",
-  "devCommand": "npm run dev",
   "functions": {
-    "src/app/api/**": {
+    "src/app/api/**/*.ts": {
       "memory": 1024,
       "maxDuration": 10
     }
   },
-  "regions": ["iad1"],
-  "env": {
-    "NODE_ENV": "production"
-  }
+  "regions": ["iad1"]
 }
