--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate-assets": "node scripts/generate-assets.js",
+    "type-check": "tsc --noEmit",
+    "build-check": "npm run type-check && npm run build"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
@@ -15,6 +18,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "next": "15.1.5",
+    "openai": "^4.0.0",
     "react": "^18",
     "react-dom": "^18",
     "recharts": "^2.13.3",
