🔒 SECURITY: Update .env.example with secure template structure
- Add all required environment variables as placeholders
- Include clear security instructions
- Prevent future credential exposure via proper template

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,17 @@
-# Environment variables
+# Environment variables template
+# Copy to .env.local and fill with your actual values
+# NEVER commit .env.local to version control
+
+# OpenAI Configuration
+OPENAI_API_KEY=your-openai-api-key-here
+
+# Supabase Configuration
+NEXT_PUBLIC_SUPABASE_URL=your-supabase-project-url
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
+
+# Email Service
+EMAIL_SERVICE_API_KEY=your-email-service-key
+
+# Site Configuration  
 NEXT_PUBLIC_SITE_URL=https://ahmedziwar.com
 NEXT_PUBLIC_GA_ID=your-ga-id
