--- a/package.json
+++ b/package.json
@@ -7,28 +7,25 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "generate-assets": "node scripts/generate-assets.js",
-    "type-check": "tsc --noEmit",
-    "build-check": "npm run type-check && npm run build"
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@emailjs/browser": "^4.4.1",
-    "@heroicons/react": "^2.2.0",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@emailjs/browser": "^4.3.3",
+    "@heroicons/react": "^2.1.5",
+    "lucide-react": "^0.519.0",
     "next": "15.1.5",
     "openai": "^4.0.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "recharts": "^2.13.3",
-    "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.31"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "eslint": "^8",
-    "eslint-config-next": "15.1.5"
+    "eslint-config-next": "15.1.5",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
