COMPREHENSIVE FIX: Add all missing dependencies for deployment success
- ADDS: @radix-ui/react-slot@1.2.3 (Button component requirement)
- ADDS: class-variance-authority@0.7.0 (Button variants support)
- ADDS: clsx@2.1.1 (className utility)
- ADDS: tailwind-merge@2.6.0 (cn utility function)
- RESOLVES: All missing dependency errors preventing deployment
- MAINTAINS: React 19 compatibility (no framer-motion)

DEPLOYMENT SAFETY PROTOCOL: All required packages for Button component and utils added

--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
     "@heroicons/react": "^2.1.5",
+    "@radix-ui/react-slot": "^1.2.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.519.0",
     "next": "15.1.5",
     "openai": "^4.0.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "@types/node": "^20",
