--- a/package.json
+++ b/package.json
@@ -6,34 +6,29 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint --max-warnings 0",
-    "lint:fix": "next lint --fix",
-    "type-check": "tsc --noEmit --strict",
-    "validate": "npm run type-check && npm run lint",
-    "clean": "rm -rf .next node_modules/.cache",
-    "build:analyze": "ANALYZE=true next build"
+    "lint": "next lint",
+    "generate-assets": "node scripts/generate-assets.js",
+    "type-check": "tsc --noEmit",
+    "build-check": "npm run type-check && npm run build"
   },
   "dependencies": {
-    "@emailjs/browser": "^4.3.3",
-    "@heroicons/react": "^2.1.5",
-    "@radix-ui/react-slot": "^1.2.3",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.519.0",
-    "next": "15.1.5",
-    "openai": "^4.0.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "tailwind-merge": "^2.6.0"
-  },
-  "devDependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@heroicons/react": "^2.2.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "next": "15.1.5",
+    "openai": "^4.0.0",
+    "react": "^18",
+    "react-dom": "^18",
+    "recharts": "^2.13.3",
+    "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.31"
+  },
+  "devDependencies": {
+    "typescript": "^5",
     "eslint": "^8",
-    "eslint-config-next": "15.1.5",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "eslint-config-next": "15.1.5"
   }
 }
