--- a/package.json
+++ b/package.json
@@ -10,18 +10,15 @@
     "generate-assets": "node scripts/generate-assets.js",
     "type-check": "tsc --noEmit",
     "build-check": "npm run type-check && npm run build",
-    
     "stage-1-safety": "node scripts/validate-config.js",
     "stage-2-typescript": "node scripts/validate-typescript.js",
     "stage-3-eslint": "eslint . --max-warnings 0 --report-unused-disable-directives",
     "stage-4-dependencies": "npm audit --audit-level=moderate && npm outdated --depth=0",
     "stage-5-build": "next build --no-lint",
     "stage-6-security": "echo 'Security analysis placeholder - implement security scanner'",
-    
     "quality-gates": "npm run stage-1-safety && npm run stage-2-typescript && npm run stage-3-eslint && npm run stage-4-dependencies && npm run stage-5-build && npm run stage-6-security",
     "pre-deploy": "npm run quality-gates",
     "deploy-safe": "npm run pre-deploy && echo 'All quality gates passed - ready for deployment'",
-    
     "validate-all": "npm run stage-1-safety",
     "fix-config": "echo 'Remove dangerous bypass flags from next.config.js manually'",
     "deployment-safety": "npm run stage-1-safety && echo 'Configuration safety validated'"
@@ -29,21 +26,28 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-slot": "^1.2.3",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.14",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.522.0",
     "next": "15.1.5",
+    "next-themes": "^0.4.6",
     "openai": "^4.0.0",
+    "postcss": "^8.4.31",
     "react": "^18",
     "react-dom": "^18",
+    "react-type-animation": "^3.2.0",
     "recharts": "^2.13.3",
-    "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.31"
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
     "eslint": "^8",
-    "eslint-config-next": "15.1.5"
+    "eslint-config-next": "15.1.5",
+    "typescript": "^5"
   }
 }
