feat: Add professional images and branding (secure) - Integrated LinkedIn profile photo in Hero section - Added AMZ logo to navigation - Configured local image storage - Updated About section layout - Implemented free stock images - Fixed CSS issues - Excluded sensitive files from commit

--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,12 @@ yarn-error.log*
 next-env.d.ts
 
 # backup
-backup_*
+backup_*# Automation scripts with sensitive data
+automation/setup-complete.ps1
+automation/setup-env.ps1
+automation/test-api.ps1
+automation/test-env.ps1
+automation/test-generate.ps1
+
+# Generated files with API responses
+generated-images.json
